<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            android:text="@string/inicia_sesion"/>

        <EditText
            android:id="@+id/et_iniciarSesion_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/dialog_hint_email"/>
        <EditText
            android:id="@+id/et_iniciarSesion_contra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/dialog_hint_contrasena"/>

        <Button
            android:id="@+id/btn_iniciarSesion_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/inicia_sesion"/>
    </LinearLayout>

</ScrollView>