<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp"
    tools:context=".fragments.ProveedoresFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/azul_rey"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:text="@string/title_proveedores"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_proveedor_salon"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/gris_fuerte"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:text="@string/salon"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_proveedor_flores"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/gris_fuerte"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:text="@string/flores"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_proveedor_foto"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/gris_fuerte"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:text="@string/foto_y_video"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_proveedor_banquete"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/gris_fuerte"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:text="@string/banquete"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_proveedor_traje"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/gris_fuerte"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        android:text="@string/renta_traje"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_proveedor_musica"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/gris_fuerte"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:text="@string/musica"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_proveedor_invitaciones"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/gris_fuerte"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/invitaciones"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_proveedor_vestidos"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/gris_fuerte"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:text="@string/vestidos"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>