<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".activities.ProveedoresActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_proveedor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/title_salones"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_proveedor_1_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/salon_1"/>

                <ImageView
                    android:id="@+id/iv_proveedor_1_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    android:layout_marginTop="30dp"/>

                <Button
                    android:id="@+id/btn_proveedor_1_vermas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/ver_mas"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_proveedor_2_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textAlignment="viewEnd"
                    android:text="@string/salon_2"/>

                <ImageView
                    android:id="@+id/iv_proveedor_2_logo"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_height="140dp"/>

                <Button
                    android:id="@+id/btn_proveedor_2_vermas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/ver_mas"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>