<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/transparent"
            android:padding="40dp">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/logo"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/gris_fuerte"
                    android:layout_marginBottom="15dp"
                    android:text="@string/registrate"/>
                <Button
                    android:id="@+id/btn_iniciar_sesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/gris_fuerte"
                    android:text="@string/inicia_sesion"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_mas_tarde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:textColor="@color/gris_fuerte"
                android:backgroundTint="@color/gris_bajito"
                android:text="@string/mas_tarde"/>
        </LinearLayout>

    </RelativeLayout>



</ScrollView>